# GeneticAlgorithmForTSP

./: .gitignore  README.md
data_analysis/: __main__.py
data_analysis/classes/: Printer.py
data_analysis/data/calibration/parameters/elite/: elite_10.csv  elite_15.csv  elite_20.csv  elite_25.csv  elite_30.csv  elite_35.csv  elite_40.csv
data_analysis/data/calibration/parameters/k/: k_1.csv  k_2.csv  k_3.csv  k_4.csv  k_5.csv
data_analysis/data/calibration/parameters/mutation_percentage/: mp_01.csv  mp_05.csv  mp_10.csv  mp_15.csv  mp_20.csv  mp_25.csv
data_analysis/data/calibration/parameters/mutation_rate/: mr_01.csv  mr_05.csv  mr_10.csv  mr_15.csv  mr_20.csv  mr_25.csv  mr_30.csv
data_analysis/data/calibration/results/: elite.csv  k.csv  mutation_percentage.csv  mutation_rate.csv  population.csv  tolerance.csv
data_analysis/data/comparisons/results/: size_cplex_on_random_polygons_analysis.csv  size_cplex_on_random_symmetric_distribution_analysis.csv  size_genetic_on_random_polygons_analysis.csv  size_genetic_on_random_symmetric_distribution_analysis.csv  size_tabu_on_random_polygons_analysis.csv  size_tabu_on_random_symmetric_distribution_analysis.csv
data_analysis/data/comparisons/size/: 10_trials__10_70_size__random_polygons__comparison.csv  10_trials__10_70_size__random_symmetric_distribution__comparison.csv
data_analysis/data/comparisons/trial/: 100_trials__tsp12__comparison.csv  100_trials__tsp60__comparison.csv
data_analysis/data/solutions/: cplex__10_60__10000__10_trials__random_polygons.csv  genetic__10_60__10000__10_trials__random_polygons.csv  genetic__10_60__100__100_trials__random_polygons.csv  tabu__10_60__10000__10_trials__random_polygons.csv
solver/: CMakeCache.txt  CMakeLists.txt  Labs-TSP.cbp  Makefile  cmake_install.cmake  main.cpp
solver/classes/solvers/include/: CPLEXsolver.h  GeneticAlgorithmSolver.h  TSPsolver.h  TabuSearchSolver.h
solver/classes/solvers/src/: CPLEXsolver.cpp  GeneticAlgorithmSolver.cpp  TabuSearchSolver.cpp
solver/classes/utility/include/: Params.h  ProblemInstanceGenerator.h  RandomNumbersGenerator.h  TSPsolution.h  TSPsolverScript.h  cpxmacro.h
solver/classes/utility/src/: Params.cpp  ProblemInstanceGenerator.cpp  RandomNumbersGenerator.cpp  TSPsolution.cpp  TSPsolverScript.cpp
solver/cmake/: FindCplex.cmake
solver/config/: params.json
(+10 files in other folders)
